# ray-tracer

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: cmake.yml
apps/: CMakeLists.txt  args_parser.cpp  args_parser.hpp  clap.cpp  clap.hpp  image.cpp  image.hpp  logger.cpp  logger.hpp  logging.hpp  main.cpp  main.hpp  renderer.cpp  renderer.hpp  scenes.cpp  scenes.hpp  thread_pool.cpp  thread_pool.hpp
docs/: CMakeLists.txt
include/rt/: camera.hpp  color.hpp  hit_record.hpp  object.hpp  object3d.hpp  point.hpp  ray.hpp  rendering.hpp  scene.hpp  surface.hpp  utils.hpp  vec3.hpp
include/rt/materials/: lambertian_alt.hpp  lambertian_hack.hpp  lambertian_true.hpp  material.hpp  metal.hpp
include/rt/primitives/: sphere.hpp  surface.hpp
src/: CMakeLists.txt  main.cpp  scene.cpp
src/materials/: lambertian_alt.cpp  lambertian_hack.cpp  lambertian_true.cpp  metal.cpp
src/primitives/: sphere.cpp
src/raylib/: camera.hpp  point3.hpp  ray.hpp  vec3.hpp
src/raylib/tests/: CMakeLists.txt
src/rt/: CMakeLists.txt  camera.h  camera.hpp  color.h  color.hpp  point.h  point.hpp  ray.h  ray.hpp  vec3.h  vec3.hpp
src/rt/primitives/: sphere.cpp  sphere.h  surface.h
src/rt/tests/: CMakeLists.txt  camera.cpp  ray.cpp  vec3.cpp
src/tests/: CMakeLists.txt  camera.cpp  color.cpp  ray.cpp  sphere.cpp  vec3.cpp
tests/: CMakeLists.txt  test_camera.cpp  test_color.cpp  test_hit_record.cpp  test_ray.cpp  test_rendering.cpp  test_scene.cpp  test_sphere.cpp  test_surface.cpp  test_utils.cpp  test_vec3.cpp
tests/primitives/: test_sphere.cpp
